WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181485
REGRESSION(
r222507
): Composition highlight doesn't render when using IME
https://bugs.webkit.org/show_bug.cgi?id=181485
Summary
REGRESSION(r222507): Composition highlight doesn't render when using IME
Wenson Hsieh
Reported
2018-01-10 09:46:48 PST
<
rdar://problem/35896516
>
Attachments
Fixes the bug
(16.66 KB, patch)
2018-01-10 11:25 PST
,
Wenson Hsieh
rniwa
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-sierra
(2.47 MB, application/zip)
2018-01-10 15:04 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews105 for mac-sierra-wk2
(2.66 MB, application/zip)
2018-01-10 16:48 PST
,
EWS Watchlist
no flags
Details
Patch for landing
(16.59 KB, patch)
2018-01-10 17:21 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-01-10 11:25:37 PST
Created
attachment 330934
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2018-01-10 12:19:59 PST
Comment on
attachment 330934
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=330934&action=review
> Source/WebCore/rendering/InlineTextBox.cpp:1047 > + paintTextSubrangeBackground(context, boxOrigin, Color::compositionFill, clampedOffset(renderer().frame().editor().compositionStart()), clampedOffset(renderer().frame().editor().compositionEnd()));
We should make Color(RGBA32 color, bool valid = true) explicit since RGBA32 is just unsigned so that mistakes like this will be harder to make (not suggesting that we should do it in this patch or that you should do it).
Wenson Hsieh
Comment 3
2018-01-10 12:27:51 PST
Comment on
attachment 330934
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=330934&action=review
Thanks for the review!
> Source/WebCore/ChangeLog:11 > + Test: editing/composition-highlight.html
Whoops, test here should be "editing/marked-text-appearance.html", not "editing/composition-highlight.html". I'll fix this before landing.
>> Source/WebCore/rendering/InlineTextBox.cpp:1047 >> + paintTextSubrangeBackground(context, boxOrigin, Color::compositionFill, clampedOffset(renderer().frame().editor().compositionStart()), clampedOffset(renderer().frame().editor().compositionEnd())); > > We should make Color(RGBA32 color, bool valid = true) explicit since RGBA32 is just unsigned so that mistakes like this will be harder to make > (not suggesting that we should do it in this patch or that you should do it).
Definitely a good idea. I think Dan Bates had ideas on how to make this more robust, too...I'll file a followup for this.
EWS Watchlist
Comment 4
2018-01-10 15:04:54 PST
Comment on
attachment 330934
[details]
Fixes the bug
Attachment 330934
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/6025473
New failing tests: webgl/1.0.2/conformance/uniforms/uniform-default-values.html
EWS Watchlist
Comment 5
2018-01-10 15:04:56 PST
Created
attachment 330971
[details]
Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6
2018-01-10 16:48:18 PST
Comment on
attachment 330934
[details]
Fixes the bug
Attachment 330934
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/6026655
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 7
2018-01-10 16:48:20 PST
Created
attachment 330987
[details]
Archive of layout-test-results from ews105 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Wenson Hsieh
Comment 8
2018-01-10 17:21:53 PST
Created
attachment 330994
[details]
Patch for landing
WebKit Commit Bot
Comment 9
2018-01-10 19:05:14 PST
Comment on
attachment 330994
[details]
Patch for landing Clearing flags on attachment: 330994 Committed
r226753
: <
https://trac.webkit.org/changeset/226753
>
Darin Adler
Comment 10
2018-01-10 22:34:41 PST
Comment on
attachment 330934
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=330934&action=review
>>> Source/WebCore/rendering/InlineTextBox.cpp:1047 >>> + paintTextSubrangeBackground(context, boxOrigin, Color::compositionFill, clampedOffset(renderer().frame().editor().compositionStart()), clampedOffset(renderer().frame().editor().compositionEnd())); >> >> We should make Color(RGBA32 color, bool valid = true) explicit since RGBA32 is just unsigned so that mistakes like this will be harder to make >> (not suggesting that we should do it in this patch or that you should do it). > > Definitely a good idea. I think Dan Bates had ideas on how to make this more robust, too...I'll file a followup for this.
I have a solution to this ambiguity coming in my color patch; the total patch is in
bug 180620
but I will be breaking off smaller pieces of it and landing them.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug